[package]
name = "dmdocdiffbot"
version = "1.0.0"
authors = ["Spookydonut <github@spooksoftware.com>"]
homepage = "https://github.com/SpaceManiac/SpacemanDMM/blob/master/src/dmdocdiffbot/README.md"
edition = "2018"

[[bin]]
name = "dmdocdiffbot"
path = "main.rs"

[dependencies]
dmdoc = { path = "../dmdoc" }
git2 = { version = "0.11", default-features = false }
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
warp_github_webhook  = "0.3.0"

[dev-dependencies]

[build-dependencies]
git2 = { version = "0.11", default-features = false }
